--- a/style.css
+++ b/style.css
@@ -23,19 +23,21 @@
 
 html,
 body {
-    width: 100vw;
-    height: 100vh;
-    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 nav {
-    width: 100vw;
+    width: 100%;
     height: 10vh;
-    position: absolute;
+    position: fixed;
+    z-index: 999;
+    top: 0;
     display: flex;
     align-items: flex-start;
     justify-content: space-around;
     padding: 2vw 3vw;
+    background-color: var(--obsidian-black);
 }
 
 nav h1 {
@@ -100,12 +102,12 @@ button svg {
     position: absolute;
     top: 100%;
     z-index: 9;
+    overflow: hidden;
 }
 
-#main,
 .page1 {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: var(--obsidian-black);
 }
 
@@ -120,7 +122,6 @@ button svg {
 .page1 h1 {
     font-size: 8vw;
     line-height: 8vw;
-
 }
 
 .page1 h1 svg {
@@ -133,6 +134,7 @@ button svg {
 }
 
 .page1 p {
+    font-size: 1.2vw;
     text-align: center;
     margin-top: 20px;
     font-weight: 500;
@@ -199,4 +201,55 @@ button svg {
     100% {
         transform: translateX(-100%);
     }
+}
+
+.page2 {
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 0vw 6.5vw;
+    padding-bottom: 7vw;
+    background-color: var(--obsidian-black);
+}
+
+.page2 .page2-left {
+    padding-top: 2vw;
+    height: 100%;
+    width: 45%;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.page2 .page2-right {
+    height: 100%;
+    width: 45%;
+}
+
+.page2-right .right-elem {
+    position: relative;
+    padding: 2vw 0 5vw 0;
+}
+
+.page2-right .right-elem h2 {
+    font-size: 1.4vw;
+    font-weight: 400;
+    text-transform: capitalize;
+    position: relative;
+    z-index: 2;
+}
+
+.page2-right img {
+    width: 7.5vw;
+    height: 7.5vw;
+    object-fit: cover;
+    border-radius: 50%;
+    position: absolute;
+    opacity: 0;
+    scale: 0;
+    z-index: 1;
 }
